fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -2,7 +2,7 @@
   "New API key": "新しい API キー",
   "Delete": "削除",
   "Revoke": "無効化",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "API キーの削除",
   "Revoke token": "トークンを取り消す",
   "Open collection": "コレクションを開く",
   "New collection": "コレクションを追加",
@@ -45,8 +45,8 @@
   "Copy ID": "ID をコピー",
   "Clear IndexedDB cache": "データベースのインデックスを削除する",
   "IndexedDB cache cleared": "データベースのインデックスを削除しました",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "ローカルストレージを消去",
+  "Local storage cleared": "ローカルストレージを消去しました",
   "Toggle debug logging": "デバッグログの切り替え",
   "Debug logging enabled": "デバッグログは有効です",
   "Debug logging disabled": "デバッグログは無効です",
@@ -112,9 +112,9 @@
   "Leave document": "ドキュメントから退出する",
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
-  "Apply template": "Apply template",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "Apply template": "テンプレートを適用",
+  "New emoji": "新しい絵文字",
+  "Upload emoji": "絵文字をアップロード",
   "Disconnect": "接続を解除",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
@@ -138,7 +138,7 @@
   "Log out": "ログアウト",
   "Mark notifications as read": "通知を既読済みにする",
   "Archive all notifications": "全ての通知をアーカイブ",
-  "New App": "New App",
+  "New App": "新しいアプリ",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "リンクをコピーしました",
