--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -814,6 +814,10 @@
   "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
+  "Welcome": "Welcome",
+  "Good morning": "Good morning",
+  "Good afternoon": "Good afternoon",
+  "Good evening": "Good evening",
   "{{ count }} invites sent": "{{ count }} invites sent",
   "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Those email addresses are already invited",
