fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -534,7 +534,7 @@
   "Code": "Codice",
   "Comment": "Commenta",
   "Create link": "Crea collegamento",
-  "Edit image URL": "Edit image URL",
+  "Edit image URL": "Modifica URL immagine",
   "Sorry, an error occurred creating the link": "Spiacenti, si è verificato un errore durante la creazione del collegamento",
   "Create a new child doc": "Crea un nuovo documento",
   "Delete table": "Elimina tabella",
@@ -623,7 +623,7 @@
   "Comment options": "Opzioni Commento",
   "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Enable embeds": "Abilita l'embedding",
-  "Delete Emoji": "Delete Emoji",
+  "Delete Emoji": "Elimina Emoji",
   "Emoji deleted": "Emoji deleted",
   "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
@@ -678,6 +678,7 @@
   "90 days": "90 giorni",
   "No expiration": "Nessuna scadenza",
   "The document archive is empty at the moment.": "L'archivio documenti è vuoto al momento.",
+  "Done editing": "Modifica Completata",
   "Drop documents to import": "Trascina qui i documenti oppure",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> non contiene ancora\n                    documenti.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} utente e {{ groupsCount }} gruppi con accesso",
@@ -688,15 +689,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} utenti con accesso",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} gruppo con accesso",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} gruppi con accesso",
-  "Archived by {{userName}}": "Archiviato da {{userName}}",
-  "Sorry, an error occurred saving the collection": "Spiacenti, si è verificato un errore durante il salvataggio della raccolta",
-  "Add a description": "Aggiungi una descrizione",
   "Overview": "Descrizione",
-  "Popular": "Popular",
+  "Popular": "Popolare",
   "Recently updated": "Aggiornati di recente",
   "Recently published": "Pubblicati di recente",
   "Least recently updated": "Aggiornati meno recentemente",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Archiviato da {{userName}}",
+  "Sorry, an error occurred saving the collection": "Spiacenti, si è verificato un errore durante il salvataggio della raccolta",
+  "Add a description": "Aggiungi una descrizione",
   "Signing in": "Accesso in corso",
   "You can safely close this window once the Outline desktop app has opened": "È possibile chiudere in modo sicuro questa finestra una volta aperta l'applicazione desktop Outline",
   "Error creating comment": "Errore durante la creazione del commento",
@@ -723,7 +724,7 @@
   "You may have lost access to this document, try reloading": "Potresti aver perso l'accesso a questo documento, prova a ricaricarlo",
   "Too many users connected to document": "Troppi utenti connessi al documento",
   "Your edits will sync once other users leave the document": "Le tue modifiche verranno sincronizzate non appena gli altri utenti avranno lasciato il documento",
-  "New version available": "New version available",
+  "New version available": "Nuova versione disponibile",
   "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Connessione al server interrotta",
   "Edits you make will sync once you’re online": "Le modifiche apportate verranno sincronizzate una volta che sarai online",
@@ -745,7 +746,6 @@
   "Edit {{noun}}": "Modifica {{noun}}",
   "Archived": "Archiviati",
   "Save draft": "Salva bozza",
-  "Done editing": "Modifica Completata",
   "Restore version": "Ripristina versione",
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
