fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -113,10 +113,10 @@
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
   "Apply template": "Applica modello",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "Nuova emoji",
+  "Upload emoji": "Carica emoji",
   "Disconnect": "Disconnetti",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "Disconnetti analytics",
   "Home": "Home",
   "Drafts": "Bozze",
   "Search": "Cerca",
@@ -256,22 +256,22 @@
   "Currently editing": "Attualemente in modifica",
   "Currently viewing": "Attualmente visualizzato",
   "Viewed {{ timeAgo }}": "Visualizzato",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Tipo di file non supportato. Utilizzare PNG, JPG, GIF o WebP.",
+  "File size too large. Maximum size is {{ size }}.": "La dimensione del file è troppo grande. La dimensione massima è {{ size }}.",
+  "Please enter a name for the emoji": "Inserisci un nome per le emoji",
+  "Please select an image file": "Seleziona un file immagine",
+  "Emoji created successfully": "Emoji creata con successo",
   "Uploading": "Caricamento",
-  "Add emoji": "Add emoji",
-  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
-  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "Choose a name": "Choose a name",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
-  "This emoji will be available as": "This emoji will be available as",
+  "Add emoji": "Aggiungi emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Le immagini quadrate con sfondo trasparente sono le più adatte. Se l'immagine è troppo grande, proveremo a ridimensionarla.",
+  "Upload an image": "Carica una immagine",
+  "Click or drag to replace": "Fai clic o trascina per sostituire",
+  "Drop the image here": "Rilascia l'immagine qui",
+  "Click, drop, or paste an image here": "Fai clic, rilascia o incolla un'immagine qui",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, o WebP fino a {{ size }}",
+  "Choose a name": "Scegli un nome",
+  "name can only contain lowercase letters, numbers, and underscores.": "il nome può contenere solo lettere minuscole, numeri e trattini bassi.",
+  "This emoji will be available as": "Questa emoji sarà disponibile come",
   "Module failed to load": "Caricamento del modulo fallito",
   "Loading Failed": "Caricamento fallito",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Spiacenti, parte dell'applicazione non si è caricata correttamente. È possibile che sia stata aggiornata da quando hai aperto la scheda oppure è fallita una richiesta di rete. Si prega di ricaricare la pagina.",
@@ -301,14 +301,14 @@
   "You will receive an email when it's complete.": "Riceverai un'email quando sarà completata.",
   "Include attachments": "Includi allegati",
   "Including uploaded images and files in the exported data": "Includere immagini e file caricati nei dati esportati",
-  "Include private collections": "Include private collections",
+  "Include private collections": "Includi collezioni private",
   "{{count}} more user": "{{count}} utente ancora",
   "{{count}} more user_plural": "{{count}} utenti ancora",
   "Filter options": "Opzioni di filtro",
   "Filter": "Filtro",
   "No results": "Nessun risultato",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
+  "{{ count }} members": "{{ count }} membro",
+  "{{ count }} members_plural": "{{ count }} membri",
   "{{authorName}} created <3></3>": "Creato\n\n\n\n\n\n\n\n",
   "{{authorName}} opened <3></3>": "Aperto",
   "Search emoji": "Cerca emoji",
@@ -337,12 +337,12 @@
   "Permission": "Permessi",
   "Change Language": "Cambia Lingua",
   "Dismiss": "Chiudi",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Impossibile scaricare l'immagine",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
-  "Edit diagram": "Edit diagram",
+  "Edit diagram": "Modifica diagramma",
   "Close": "Chiudi",
   "Previous": "Precedente",
   "Next": "Successivo",
@@ -354,11 +354,11 @@
   "Unknown": "Sconosciuto",
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
-  "Client type": "Client type",
-  "Confidential": "Confidential",
-  "Suitable for server-side applications": "Suitable for server-side applications",
-  "Public": "Public",
-  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
+  "Client type": "Tipo di cliente",
+  "Confidential": "Riservato",
+  "Suitable for server-side applications": "Adatto alle applicazioni lato server",
+  "Public": "Pubblico",
+  "Suitable for client-side or mobile applications": "Adatto per applicazioni client o mobili",
   "Icon": "Icona",
   "OAuth client icon": "Icona client OAuth",
   "My App": "La mia App",
@@ -375,8 +375,8 @@
   "Reaction picker": "Selettore di reazione",
   "Could not load reactions": "Impossibile caricare le reazioni",
   "Reaction": "Reazione",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m letto",
+  "{{ hours }}h read": "{{ hours }}h letto",
   "{{ minutes }}m read": "{{ minutes }} minuti di lettura",
   "Revision deleted": "Revisione eliminata",
   "Current version": "Versione corrente",
@@ -447,7 +447,7 @@
   "Archived collections": "Collezioni archiviate",
   "New doc": "Nuovo documento",
   "Empty": "Vuoto",
-  "No collections": "No collections",
+  "No collections": "Nessuna collezione",
   "Collapse": "Raggruppa",
   "Expand": "Espandi",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento non supportato – prova Markdown, testo semplice, HTML o Word",
@@ -457,7 +457,7 @@
   "Could not load shared documents": "Impossibile caricare i documenti condivisi",
   "Shared with me": "Condiviso con me",
   "Show more": "Mostra altro",
-  "Link options": "Link options",
+  "Link options": "Opzioni link",
   "Could not load starred documents": "Impossibile caricare i documenti contrassegnati con stelle",
   "Starred": "Preferiti",
   "Up to date": "Aggiornato",
@@ -510,7 +510,7 @@
   "Profile picture": "Immagine del profilo",
   "Create a new doc": "Crea un nuovo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} Non verrà notificato, in quanto Non",
-  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "I membri di \"{{ groupName }}\" che hanno accesso a questo documento verranno avvisati",
   "Keep as link": "Mantieni come link",
   "Mention": "Menzione",
   "Embed": "Incorpora",
@@ -600,7 +600,7 @@
   "Video": "Video",
   "None": "Nessuno",
   "Delete embed": "Elimina incorporamento",
-  "Formatting controls": "Formatting controls",
+  "Formatting controls": "Controlli di formattazione",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Impossibile importare il file",
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
@@ -624,7 +624,7 @@
   "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Enable embeds": "Abilita l'embedding",
   "Delete Emoji": "Elimina Emoji",
-  "Emoji deleted": "Emoji deleted",
+  "Emoji deleted": "Emoji eliminata",
   "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Membri del gruppo",
@@ -951,19 +951,19 @@
   "pins": "pins",
   "shares": "shares",
   "users": "utenti",
-  "teams": "teams",
-  "workspace": "workspace",
-  "Read all data": "Read all data",
-  "Write all data": "Write all data",
+  "teams": "team",
+  "workspace": "spazio di lavoro",
+  "Read all data": "Leggi tutti i dati",
+  "Write all data": "Scrivi tutti i dati",
   "Any collection": "Qualsiasi raccolta",
-  "All time": "All time",
+  "All time": "Sempre",
   "Past day": "Ieri",
   "Past week": "Settimana scorsa",
   "Past month": "Mese scorso",
   "Past year": "Anno scorso",
   "Any time": "Qualsiasi momento",
-  "Remove document filter": "Remove document filter",
-  "Any status": "Any status",
+  "Remove document filter": "Rimuovi filtro documento",
+  "Any status": "Qualsiasi stato",
   "Remove search": "Rimuovi ricerca",
   "Any author": "Qualsiasi autore",
   "Search titles only": "Cerca solo nei titoli",
@@ -971,17 +971,17 @@
   "No documents found for your search filters.": "Nessun documento trovato per i tuoi filtri.",
   "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.",
   "API keys have been disabled by an admin for your account": "API keys have been disabled by an admin for your account",
-  "Application access": "Application access",
+  "Application access": "Accesso all'applicazione",
   "Manage which third-party and internal applications have been granted access to your {{ appName }} account.": "Manage which third-party and internal applications have been granted access to your {{ appName }} account.",
   "API": "API",
   "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.": "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.",
-  "Application published": "Application published",
+  "Application published": "Applicazione pubblicata",
   "Application updated": "Application updated",
   "Client secret rotated": "Client secret rotated",
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
-  "Application icon": "Application icon",
+  "Application icon": "Icona applicazione",
   "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
