fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -948,7 +948,7 @@
   "integrations": "integrazioni",
   "notifications": "notifiche",
   "reactions": "reazioni",
-  "pins": "pins",
+  "pins": "appunta",
   "shares": "condivisioni",
   "users": "utenti",
   "teams": "team",
@@ -969,12 +969,12 @@
   "Search titles only": "Cerca solo nei titoli",
   "Please try again or contact support if the problem persists": "Riprova o contatta l'assistenza se il problema persiste",
   "No documents found for your search filters.": "Nessun documento trovato per i tuoi filtri.",
-  "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.",
+  "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "Crea chiavi API personali per autenticarti con l'API e controllare a livello di programmazione\n      i dati del tuo spazio di lavoro. Per maggiori dettagli, consulta la <em>documentazione per sviluppatori</em>.",
   "API keys have been disabled by an admin for your account": "Le chiavi API sono state disabilitate da un amministratore per il tuo account",
   "Application access": "Accesso all'applicazione",
   "Manage which third-party and internal applications have been granted access to your {{ appName }} account.": "Gestisci quali applicazioni di terze parti e interne hanno avuto accesso al tuo account {{ appName }}.",
   "API": "API",
-  "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.": "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.",
+  "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.": "Le chiavi API possono essere usate per autenticarsi con l'API e controllare programmaticamente i dati\n          del tuo spazio di lavoro. Per maggiori dettagli consultare la documentazione <em>dello sviluppatore</em>.",
   "Application published": "Applicazione pubblicata",
   "Application updated": "Applicazione aggiornata",
   "Client secret rotated": "Client segreto ruotato",
@@ -982,7 +982,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "La rotazione del segreto client invaliderà il segreto corrente. Assicurati di aggiornare tutte le applicazioni che utilizzano queste credenziali.",
   "Displayed to users when authorizing": "Visualizzato agli utenti quando si autorizza",
   "Application icon": "Icona applicazione",
-  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
+  "Confidential clients can securely store a secret": "I client riservati possono archiviare in modo sicuro un segreto",
   "Developer information shown to users when authorizing": "Informazioni sullo sviluppatore mostrate agli utenti durante l'autorizzazione",
   "Developer name": "Nome sviluppatore",
   "Developer URL": "URL sviluppatore",
@@ -999,7 +999,7 @@
   "by {{ name }}": "di {{ name }}",
   "Last used": "Ultimo utilizzo",
   "No expiry": "Nessuna scadenza",
-  "Restricted scope": "Restricted scope",
+  "Restricted scope": "Campo limitato",
   "API key copied to clipboard": "Chiave API copiata negli appunti",
   "Copied": "Copiato",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sei sicuro di voler revocare il token {{ tokenName }}?",
@@ -1123,7 +1123,7 @@
   "Danger": "Pericolo",
   "You can delete this entire workspace including collections, documents, and users.": "È possibile eliminare l'intera area di lavoro, comprese raccolte, documenti e utenti.",
   "Export data": "Esporta dati",
-  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.",
+  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Un'esportazione completa potrebbe richiedere del tempo; valuta la possibilità di esportare un singolo documento o una singola raccolta. Puoi uscire da questa pagina una volta avviata l'esportazione: se hai abilitato le notifiche, invieremo un'email con un link a <em>{{ userEmail }}</em> al termine dell'operazione.",
   "Recent exports": "Esportazioni recenti",
   "Manage optional and beta features. Changing these settings will affect the experience for all members of the workspace.": "Gestisci le funzionalità opzionali e beta. La modifica di queste impostazioni influirà sull'esperienza di tutti i membri dell'area di lavoro.",
   "Separate editing": "Modifica separata",
@@ -1143,7 +1143,7 @@
   "Recent imports": "Importazioni recenti",
   "Configure a variety of integrations with third-party services.": "Configura una varietà di integrazioni con servizi di terze parti.",
   "Could not load members": "Impossibile caricare i membri",
-  "Everyone that has signed into {{appName}} is listed here. It’s possible that there are other users who have access through {{signinMethods}} but haven’t signed in yet.": "Everyone that has signed into {{appName}} is listed here. It’s possible that there are other users who have access through {{signinMethods}} but haven’t signed in yet.",
+  "Everyone that has signed into {{appName}} is listed here. It’s possible that there are other users who have access through {{signinMethods}} but haven’t signed in yet.": "Qui sono elencati tutti gli utenti che hanno effettuato l'accesso a {{appName}}. È possibile che altri utenti abbiano accesso tramite {{signinMethods}} ma non abbiano ancora effettuato l'accesso.",
   "Receive a notification whenever a new document is published": "Ricevi una notifica ogni volta che viene pubblicato un nuovo documento",
   "Document updated": "Documento aggiornato",
   "Receive a notification when a document you are subscribed to is edited": "Ricevi una notifica quando un documento a cui sei iscritto viene modificato",
@@ -1233,7 +1233,7 @@
   "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} utilizza {{ appName }} per condividere documenti, effettua il login per continuare.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Un codice di conferma è stato inviato al tuo indirizzo email. Inserisci il codice qui sotto per eliminare definitivamente questo spazio di lavoro.",
   "Confirmation code": "Codice di conferma",
-  "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
+  "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "L'eliminazione dell'area di lavoro <1>{{workspaceName}}</1> eliminerà tutte le raccolte, i documenti, gli utenti e i dati associati. Verrai immediatamente disconnesso da {{appName}}.",
   "Please note that workspaces are completely separated. They can have a different domain, settings, users, and billing.": "Si prega di notare che gli spazi di lavoro sono completamente separati. Possono avere domini, impostazioni, utenti e fatturazione diversi.",
   "You are creating a new workspace using your current account — <em>{{email}}</em>": "Stai creando un nuovo spazio di lavoro utilizzando il tuo account corrente — <em>{{email}}</em>",
   "To create a workspace under another email please sign up from the homepage": "Per creare uno spazio di lavoro con un'altra email, registrati dalla homepage",
@@ -1268,7 +1268,7 @@
   "Choose a size for your exported document": "Scegli una dimensione per il tuo documento esportato",
   "Revision renamed": "Revisione rinominata",
   "Failed to save revision": "Impossibile salvare la revisione",
-  "Invite to document": "Invite to document",
+  "Invite to document": "Invita a documentare",
   "Sorry, invalid embed link": "Spiacenti, link incorporato non valido",
   "Data Attributes": "Attributi dei dati",
   "Edit attribute": "Modifica attributo",
@@ -1276,7 +1276,7 @@
   "Yes": "Si",
   "No": "No",
   "Search or ask a question": "Cerca o fai una domanda",
-  "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
+  "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "L'utente invitato {{roleName}} non avrà accesso ad alcuna raccolta o documento, a meno che non venga esplicitamente condiviso.",
   "Can view only what is explicitly shared": "Puoi visualizzare solo ciò che è condiviso esplicitamente",
   "SAML assertion was invalid or missing fields, please check your configuration": "L'asserzione SAML non è valida o mancano campi, controlla la tua configurazione",
   "AI generated answer based on related documents in your workspace": "Risposta generata dall' IA in base ai documenti correlati nel tuo spazio di lavoro",
@@ -1284,7 +1284,7 @@
   "Enable AI answers to get direct answers to searched questions.": "Abilita le risposte IA per ottenere risposte dirette alle domande cercate.",
   "Go to settings": "Vai alle impostazioni",
   "Where do I find the file?": "Dove trovo il file?",
-  "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
+  "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In uno spazio Confluence, vai su <em>Impostazioni spazio -> Gestisci spazio -> Esporta spazio</em> e scegli di esportare come HTML con l'opzione \"Esportazione normale\".",
   "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Trascina e rilascia il file zip dall'opzione di esportazione HTML di Confluence oppure fai clic per caricarlo",
   "Guests": "Ospiti",
   "New Attribute": "Nuovo attributo",
@@ -1303,7 +1303,7 @@
   "Text": "Testo",
   "List": "Elenco",
   "Could not load events": "Impossibile caricare gli eventi",
-  "Audit Log": "Audit Log",
+  "Audit Log": "Log di audit",
   "The audit log details the history of security related and other events across your knowledge base.": "Il registro degli audit riporta la cronologia degli eventi relativi alla sicurezza e di altro tipo nella knowledge base.",
   "IP address": "Indirizzo IP",
   "Actor": "Attore",
@@ -1318,8 +1318,8 @@
   "Date archived": "Data di archiviazione",
   "Could not load collections": "Impossibile caricare le collezioni",
   "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.": "Gestisci i permessi e le impostazioni di tutte le collezioni nella base di conoscenze. Come amministratore del workspace puoi anche amministrare le collezioni private.",
-  "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.": "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.",
-  "API Endpoint": "API Endpoint",
+  "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.": "Indicizza e cerca automaticamente il contenuto dei documenti da {{appName}} all'interno di <4>Glean</4> in tempo reale.",
+  "API Endpoint": "Endpoint API",
   "API Secret": "API Secret",
   "Datasource": "Sorgente dati",
   "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.": "Dettagli della licenza {{appName}} corrente. Per organizzare il rinnovo del contratto in caso di scadenza, limiti di postazioni o aumento delle licenze, contatta il tuo account manager o invia un'e-mail a <4>priority@getoutline.com</4>.",
@@ -1360,9 +1360,9 @@
   "Personal account": "Account personale",
   "Link your {{appName}} account to Slack to enable searching and previewing the documents you have access to, directly within chat.": "Collega il tuo account {{appName}} a Slack per abilitare la ricerca e l'anteprima dei documenti a cui hai accesso, direttamente nella chat.",
   "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?": "Disconnettendo il tuo account personale non potrai più cercare documenti su Slack. Sei sicuro?",
-  "Slash command": "Slash command",
+  "Slash command": "Comando slash",
   "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.": "Ottieni anteprime dei link {{ appName }} condivisi in Slack e usa il comando slash <em>{{ command }}</em> per cercare documenti senza uscire dalla chat.",
-  "This will remove the Outline slash command from your Slack workspace. Are you sure?": "This will remove the Outline slash command from your Slack workspace. Are you sure?",
+  "This will remove the Outline slash command from your Slack workspace. Are you sure?": "Questo rimuoverà il comando Slash Outline dal tuo spazio di lavoro Slack. Sei sicuro?",
   "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.": "Collega le raccolte di {{appName}} ai canali Slack e i messaggi verranno automaticamente pubblicati su Slack quando i documenti vengono pubblicati o aggiornati.",
   "Comment by {{ author }} on \"{{ title }}\"": "Commento di {{ author }} su \"{{ title }}\"",
   "How to use {{ command }}": "Come usare {{ command }}",
