--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -747,6 +747,7 @@
   "Archived": "Archived",
   "Save draft": "Save draft",
   "Restore version": "Restore version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "No history yet",
   "Source": "Source",
   "Created": "Created",
