--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -700,7 +700,8 @@
   "Add a description": "Add a description",
   "Signing in": "Signing in",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
-  "Changes": "Changes",
+  "{{ count }} changes": "{{ count }} changes",
+  "{{ count }} changes_plural": "{{ count }} changes",
   "Previous change": "Previous change",
   "Next change": "Next change",
   "Error creating comment": "Error creating comment",
